--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 group 'com.foodenak'
-version '1.0.0'
+version '1.0.1'
 
 buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.1"
-    }
+  ext.kotlin_version = '1.0.5-3'
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
 }
 
 apply plugin: 'java'
@@ -16,10 +17,10 @@ apply plugin: 'kotlin'
 sourceCompatibility = 1.5
 
 repositories {
-    mavenCentral()
+  jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.1"
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+  compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  testCompile group: 'junit', name: 'junit', version: '4.11'
 }
